# c2ssa

./: .gitignore  CMakeLists.txt  README.md  draw_call_graph.py  function_call.py  local2global.py  run.py
cmake/: llvm.cmake
include/: BackendUtil.h  CBackend.h  CallGraph.h  CodeGenAction.h  IDMap.h  LoopUnrollPass.h  PassManagerBuilder.h  PrintingPass.h  PromoteMemToReg.h  SROA.h  TopologicalSorter.h
src/: BackendUtil.cpp  CBackend.cpp  CallGraph.cpp  CodeGenAction.cpp  LoopUnrollPass.cpp  PassManagerBuilder.cpp  PrintingPass.cpp  PromoteMemToReg.cpp  SROA.cpp  TopologicalSorter.cpp  main.cpp  main_.cpp
tests/: t1.c  t10.c  t3.c  t3.v.c  t4.c  t5.c  t6.c  t7.c  t8.c  t9.c
